--- a/index.html
+++ b/index.html
@@ -22,45 +22,52 @@
 
 <body>
 
-    <div class="container">
-        <div class="row">
-            <div class="col-md-2">logo</div>
-            <div class="col-md-7"></div>
-            <div class="col-md-3">
-                    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                            <div class="collapse navbar-collapse" id="navbarNav">
-                              <ul class="navbar-nav">
-                                <li class="nav-item active">
-                                  <a class="nav-link" href="index.html">About<span class="sr-only">(current)</span></a>
-                                </li>
-                                <li class="nav-item">
-                                  <a class="nav-link" href="portfolio.html">Portfolio</a>
-                                </li>
-                                <li class="nav-item">
-                                  <a class="nav-link" href="contact.html">Contact</a>
-                                </li>
-                              </ul>
-                            </div>
-                          </nav>
-            </div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">Violet Chang</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html">About<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h1>About Me</h1>
+      </div>
+      <div class="media">
+          <img src="images/1.jpg" class="align-self-start mr-3" width="200px">
+          <div class="media-body">
+            <p>I'm Violet. Graphic designer, photographer, soon-to-be full stack developer.</p>
+            <p>Vestibulum consectetur rutrum efficitur. Vestibulum congue odio id magna cursus venenatis. Pellentesque tellus metus, vehicula ut velit bibendum, aliquet dignissim justo. Sed mollis, dolor sed cursus auctor, risus mauris cursus metus, in dignissim diam ex ut massa. Curabitur nec neque efficitur, dictum risus sit amet, tempor augue. Praesent tincidunt blandit dolor, non rutrum nibh vulputate non. Vestibulum luctus enim id lectus viverra rhoncus. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id officiis nihil voluptas, vitae soluta unde iste nobis illo error quia. Modi minus ducimus voluptates architecto nesciunt eos recusandae eaque porro. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit voluptatem reprehenderit numquam vel, delectus earum id minus explicabo. Sequi asperiores aut quos debitis qui ut magni ipsum nemo voluptatem minus, pariatur maxime impedit, accusantium a nesciunt dolore saepe praesentium, amet voluptatum. Minima reprehenderit sequi tempore assumenda similique aliquam qui nam.</p>
+          </div>
         </div>
     </div>
 
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <h1>About Me</h1>
-                <hr>
-            </div>
-        </div>
-    </div>
+    <footer class="footer">
+      <div class="col-md-12">
+        <span class="text-white">Copyright ©</span>
+        </div>  
+    </footer>
 
 
-  <!-- jQuery, javascript file for the Bootstrap's javascript file to function -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- jQuery, javascript file for the Bootstrap's javascript file to function -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-  <!-- Bootstrap's javascript file that allows the dropdown menu to work  -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <!-- Bootstrap's javascript file that allows the dropdown menu to work  -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
 </body>
 
